@@ -79,6 +79,11 @@
   :type '(string)
   :group 'nethack)
 
+(defcustom nethack-purge-buffers t
+  "When this variable is non-nil, kill all nethack buffers when nethack quits."
+  :type '(boolean)
+  :group 'nethack)
+
 ;;; Insert variables that control how the status gets displayed here.
 
 (defcustom nethack-use-tiles nil
@@ -381,12 +386,11 @@ attribute, the new value and the old value."
   "nethack white"
   :group 'nethack-faces)
 
-
 
 ;;; Process
 (defvar nh-proc nil)
 (defvar nh-proc-buffer-name "*nh-output*")
-(defvar nh-proc-kill-buffer-on-quit nil
+(defvar nh-proc-kill-buffer-on-quit t
   "When the process ends kill the process buffer if this is t.")
 (defvar nh-log-buffer "*nh-log*")
 
@@ -433,7 +437,9 @@ PROC is the process object and MSG is the exit message."
     )
   (delete-process proc)
   (if nh-proc-kill-buffer-on-quit
-      (kill-buffer (get-buffer nh-proc-buffer-name))))
+      (kill-buffer (get-buffer nh-proc-buffer-name)))
+  (if nethack-purge-buffers
+      (nethack-kill-buffers)))
 
 (defvar nh-log-process-text t)
 (defun nh-log (string)
